--- a/index.html
+++ b/index.html
@@ -1,28 +1,62 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<title>Hank Quinlan, Horrible Cop</title>
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
-			</ul>
-		</footer>
-	</body>
+<html ng-app="BestWeather">
+<head lang="en">
+	<meta charset="UTF-8">
+	<title>Best Weather</title>
+	<script src="node_modules/angular/angular.min.js" type="text/javascript"></script>
+	<script src="node_modules/underscore/underscore-min.js" type="text/javascript"></script>
+	<script src="dist/app.js" type="text/javascript"></script>
+	<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css"/>
+</head>
+<body ng-controller="BestWeatherController as BWC">
+<div class="container">
+	<header class="header clearfix">
+		<h2 class="text-muted">The Best Weather on Earth</h2>
+		<h6 class="text-muted">
+			<label>
+				<input type="radio" ng-model="BWC.gender" value="MALE" ng-change="BWC.changeGender()">
+				Male
+			</label>
+			<label>
+				<input type="radio" ng-model="BWC.gender" value="FEMALE" ng-change="BWC.changeGender()">
+				Female
+			</label>
+		</h6>
+	</header>
+
+	<main role="main" ng-show="BWC.weatherResults.length>0">
+
+		<div class="jumbotron">
+			<h1 class="display-3">{{BWC.weatherResults[0].name}}</h1>
+			<p class="lead">Temp: {{BWC.weatherResults[0].main.temp}}°</p>
+			<p class="lead">Humidity: {{BWC.weatherResults[0].main.humidity}}%</p>
+		</div>
+
+		<div class="row">
+			<h3>Top Results:</h3>
+		</div>
+		<div class="row">
+			<div class="col-lg-6">
+				<div ng-repeat="city in BWC.weatherResults.slice(1,4)">
+					<h4>{{city.name}}</h4>
+					<p>Temp: {{city.main.temp}}°    Humidity: {{city.main.humidity}}%</p>
+				</div>
+			</div>
+			<div class="col-lg-6">
+				<div ng-repeat="city in BWC.weatherResults.slice(4,7)">
+					<h4>{{city.name}}</h4>
+					<p>Temp: {{city.main.temp}}°    Humidity: {{city.main.humidity}}%</p>
+				</div>
+			</div>
+
+		</div>
+
+	</main>
+	<main role="main" ng-show="BWC.weatherResults.length==0">
+		<div class="jumbotron">
+			<h1 class="display-3">Loading...</h1>
+		</div>
+	</main>
+</div>
+</body>
 </html>
