--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
 	<meta charset="UTF-8">
 	<title>Best Weather</title>
-	<script src="node_modules/angular/angular.min.js" type="text/javascript"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
 	<script src="node_modules/underscore/underscore-min.js" type="text/javascript"></script>
 	<script src="dist/app.js" type="text/javascript"></script>
 	<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css"/>
